--- a/pom.xml
+++ b/pom.xml
@@ -56,4 +56,20 @@
         </dependency>
     </dependencies>
 
+
+    <build>
+    <plugins>
+    <!--<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+            &lt;!&ndash; since 2.5 &ndash;&gt;
+            <systemPropertyVariables>
+                <fileName>${test}</fileName>
+            </systemPropertyVariables>
+        </configuration>
+    </plugin>-->
+    </plugins>
+    </build>
+
 </project>
